# fpl-data

./: .env.example  main.py  pyproject.toml
.github/workflows/: update.yml
clubelo/ratings/: Aston Villa.csv  Brentford.csv  Forest.csv  Ipswich.csv  Luton.csv  Sheffield United.csv  Swansea.csv  West Brom.csv
data/clubelo/: team_ids.csv
data/clubelo/ratings/: Arsenal.csv  Aston Villa.csv  Bournemouth.csv  Brentford.csv  Brighton.csv  Burnley.csv  Chelsea.csv  Crystal Palace.csv  Everton.csv  Forest.csv  Fulham.csv  Hull.csv  Leeds.csv  Liverpool.csv  Man City.csv  Man United.csv  Middlesbrough.csv  Newcastle.csv  Norwich.csv  Stoke.csv  Sunderland.csv  Tottenham.csv  West Ham.csv  Wolves.csv
data/footballdata/: team_ids.csv
data/footballdata/data/: 2024.csv  2025.csv
data/fpl/2025/: fixtures.csv
data/fpl/2025-26/: fixtures.csv
data/theoddsapi/: team_ids.csv
data/theoddsapi/2021/: 1.json.xz  10.json.xz  11.json.xz  12.json.xz  13.json.xz  14.json.xz  15.json.xz  16.json.xz  17.json.xz  18.json.xz  19.json.xz  2.json.xz  20.json.xz  21.json.xz  22.json.xz  23.json.xz  24.json.xz  25.json.xz  26.json.xz  27.json.xz  28.json.xz  29.json.xz  3.json.xz  30.json.xz  31.json.xz  (+13 more)
data/understat/: player_ids.csv  team_ids.csv
src/: utils.py
src/clubelo/: fetch.py  read.py  update.py
src/footballdata/: fetch.py  read.py  update.py
src/fpl/: fetch.py  read.py  update.py
src/read/: clubelo.py  fpl.py  understat.py
src/theoddsapi/: fetch.py  read.py  update.py
src/understat/: fetch.py  read.py  update.py
src/update/: clubelo.py  fpl.py  understat.py
(+2364 files in other folders)
